# src/models/requests/ILoginParams.ts
@@ -1,0 +1,5 @@
+export interface ILoginParams {
+    username?: string;
+    email?: string;
+    password?: string;
+}
