# src/models/requests/INewUserParams.ts
@@ -1,0 +1,5 @@
+export interface INewUserParams {
+    username: string;
+    email: string;
+    password: string;
+}
