# src/models/responses/index.ts
@@ -1,0 +1,3 @@
+export { IErrorResponse } from './IErrorResponse';
+export { ILoginResponse } from './ILoginResponse';
+export { IUserResponse } from './IUserResponse';
